--- a/forum/templates/forum/base.html
+++ b/forum/templates/forum/base.html
@@ -9,7 +9,7 @@
             Rehub Laboratory
         {% endblock %}
     </title>
-    <!-- Bootstrap CSS -->
+    <link rel="icon" type="image/png" href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSygP_Ckcn-9VPDRcF9dyZ32e7L88W-S4YAeQ&usqp=CAU">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link type="text/css" href="{% static 'forum/css/style.css' %}" rel="stylesheet"/>
     <link type="text/css"  href="{% static 'forum/css/projects.css' %}" rel="stylesheet">
