--- a/forum/templates/forum/index.html
+++ b/forum/templates/forum/index.html
@@ -17,7 +17,7 @@
                     <div class="card mb-4 shadow" style="border-radius: 15px; overflow: hidden; box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);">
                         <div class="card-body">
                             <h5 class="card-title">{{ post.title }}</h5>
-                            <p class="card-text">{{ post.description }}</p>
+                            <p class="card-text">{{ post.description|truncatechars:75}}</p>
                         </div>
                         <div class="card-footer d-flex justify-content-between align-items-center" style="background: url('path_to_your_background_image'); background-size: cover;">
                             <a href="{{post.get_absolute_url}}" class="btn btn-sm btn-primary">Join</a>
