--- a/forum/templates/forum/users.html
+++ b/forum/templates/forum/users.html
@@ -32,7 +32,7 @@
                 <div class="card-body text-center">
                     <img src="{{ user.photo.url }}" alt="{{ user.username }}'s photo" class="img-fluid rounded-circle mb-2" style="width: 100px; height: 100px;">
                     <h5 class="card-title">{{ user.username }}</h5>
-                    <p class="card-text">Specialization: {{ user.specialization }}</p>
+                    <p class="card-text">Specialization: {{ user.specialization|truncatechars:25 }}</p>
                     <p class="card-text">Joined: {{ user.date_joined }}</p>
                     <a href="{{ user.get_absolute_url }}" class="btn btn-primary">View Profile</a>
                 </div>
