edit form , do photo is required

--- a/forum/templates/forum/register.html
+++ b/forum/templates/forum/register.html
@@ -54,16 +54,8 @@
         </div>
 
         <div class="form-group">
-            <label class="form-label" for="{{ form.course.id_for_label }}">Course:</label>
-            <input type="text" id="{{ form.course.id_for_label }}" name="{{ form.course.name }}" class="form-control">
-            <div class="form-error">{{ form.course.errors }}</div>
-        </div>
-
-
-
-        <div class="form-group">
             <label class="form-label" for="{{ form.photo.id_for_label }}">Photo:</label>
-            <input type="file" id="{{ form.photo.id_for_label }}" name="{{ form.photo.name }}" class="form-control">
+            <input type="file" id="{{ form.photo.id_for_label }}" name="{{ form.photo.name }}" class="form-control" required>
             <div class="form-error">{{ form.photo.errors }}</div>
         </div>
 
